src/main/gen/com/valtdevelop/wandlangplugin/WandParser.java
// This is a generated file. Not intended for manual editing.
package com.valtdevelop.wandlangplugin;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.valtdevelop.wandlangplugin.psi.WandTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WandParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // abstract_method_modifiers? result_type method_declarator throws_list? ';'
  public static boolean abstract_method_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_method_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_METHOD_DECLARATION, "<abstract method declaration>");
    r = abstract_method_declaration_0(b, l + 1);
    r = r && result_type(b, l + 1);
    r = r && method_declarator(b, l + 1);
    r = r && abstract_method_declaration_3(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // abstract_method_modifiers?
  private static boolean abstract_method_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_method_declaration_0")) return false;
    abstract_method_modifiers(b, l + 1);
    return true;
  }

  // throws_list?
  private static boolean abstract_method_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_method_declaration_3")) return false;
    throws_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'public' | 'abstract'
  public static boolean abstract_method_modifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_method_modifier")) return false;
    if (!nextTokenIs(b, "<abstract method modifier>", ABSTRACT, PUBLIC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_METHOD_MODIFIER, "<abstract method modifier>");
    r = consumeToken(b, PUBLIC);
    if (!r) r = consumeToken(b, ABSTRACT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // abstract_method_modifier*
  public static boolean abstract_method_modifiers(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_method_modifiers")) return false;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_METHOD_MODIFIERS, "<abstract method modifiers>");
    while (true) {
      int c = current_position_(b);
      if (!abstract_method_modifier(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abstract_method_modifiers", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // multiplicative_expression (('+'|'-') multiplicative_expression)*
  public static boolean additive_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    r = multiplicative_expression(b, l + 1);
    r = r && additive_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (('+'|'-') multiplicative_expression)*
  private static boolean additive_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expression_1", c)) break;
    }
    return true;
  }

  // ('+'|'-') multiplicative_expression
  private static boolean additive_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_expression_1_0_0(b, l + 1);
    r = r && multiplicative_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '+'|'-'
  private static boolean additive_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, ADD);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER ('.' IDENTIFIER)*
  public static boolean ambiguous_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ambiguous_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && ambiguous_name_1(b, l + 1);
    exit_section_(b, m, AMBIGUOUS_NAME, r);
    return r;
  }

  // ('.' IDENTIFIER)*
  private static boolean ambiguous_name_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ambiguous_name_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ambiguous_name_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ambiguous_name_1", c)) break;
    }
    return true;
  }

  // '.' IDENTIFIER
  private static boolean ambiguous_name_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ambiguous_name_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // equality_expression ('&' equality_expression)*
  public static boolean and_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXPRESSION, "<and expression>");
    r = equality_expression(b, l + 1);
    r = r && and_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('&' equality_expression)*
  private static boolean and_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expression_1", c)) break;
    }
    return true;
  }

  // '&' equality_expression
  private static boolean and_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BIN_AND);
    r = r && equality_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression (',' expression)*
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
    r = expression(b, l + 1);
    r = r && argument_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' expression)*
  private static boolean argument_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_list_1", c)) break;
    }
    return true;
  }

  // ',' expression
  private static boolean argument_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'new' primitive_type dim_exprs dims? | 'new' class_or_interface_type dim_exprs dims?
  public static boolean array_creation_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_creation_expression")) return false;
    if (!nextTokenIs(b, NEW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_creation_expression_0(b, l + 1);
    if (!r) r = array_creation_expression_1(b, l + 1);
    exit_section_(b, m, ARRAY_CREATION_EXPRESSION, r);
    return r;
  }

  // 'new' primitive_type dim_exprs dims?
  private static boolean array_creation_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_creation_expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
    r = r && primitive_type(b, l + 1);
    r = r && dim_exprs(b, l + 1);
    r = r && array_creation_expression_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // dims?
  private static boolean array_creation_expression_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_creation_expression_0_3")) return false;
    dims(b, l + 1);
    return true;
  }

  // 'new' class_or_interface_type dim_exprs dims?
  private static boolean array_creation_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_creation_expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
    r = r && class_or_interface_type(b, l + 1);
    r = r && dim_exprs(b, l + 1);
    r = r && array_creation_expression_1_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // dims?
  private static boolean array_creation_expression_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_creation_expression_1_3")) return false;
    dims(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' variable_initializers? ',' ? '}'
  public static boolean array_initializer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_initializer")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && array_initializer_1(b, l + 1);
    r = r && array_initializer_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, ARRAY_INITIALIZER, r);
    return r;
  }

  // variable_initializers?
  private static boolean array_initializer_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_initializer_1")) return false;
    variable_initializers(b, l + 1);
    return true;
  }

  // ',' ?
  private static boolean array_initializer_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_initializer_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // left_hand_side assignment_operator assignment_expression
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = left_hand_side(b, l + 1);
    r = r && assignment_operator(b, l + 1);
    r = r && assignment_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // conditional_expression | assignment
  public static boolean assignment_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_EXPRESSION, "<assignment expression>");
    r = conditional_expression(b, l + 1);
    if (!r) r = assignment(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '=' | '*=' | '/=' | '%=' | '+=' | '-=' | '<<=' | '>>=' | '>>>=' | '&=' | '^=' | '|='
  public static boolean assignment_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OPERATOR, "<assignment operator>");
    r = consumeToken(b, ASSING);
    if (!r) r = consumeToken(b, MUL_ASSIGN);
    if (!r) r = consumeToken(b, DIV_ASSIGN);
    if (!r) r = consumeToken(b, MOD_ASSIGN);
    if (!r) r = consumeToken(b, ADD_ASSIGN);
    if (!r) r = consumeToken(b, MINUS_ASSIGN);
    if (!r) r = consumeToken(b, LSHIFT_ASSIGN);
    if (!r) r = consumeToken(b, RSHIFT_ASSIGN);
    if (!r) r = consumeToken(b, URSHIFT_ASSIGN);
    if (!r) r = consumeToken(b, BIN_AND_ASSIGN);
    if (!r) r = consumeToken(b, BIN_XOR_ASSIGN);
    if (!r) r = consumeToken(b, BIN_OR_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '{' block_statements? '}'
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && block_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // block_statements?
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    block_statements(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // local_variable_declaration_statement | statement
  public static boolean block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STATEMENT, "<block statement>");
    r = local_variable_declaration_statement(b, l + 1);
    if (!r) r = statement(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // block_statement*
  public static boolean block_statements(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statements")) return false;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STATEMENTS, "<block statements>");
    while (true) {
      int c = current_position_(b);
      if (!block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_statements", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean boolean_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_literal")) return false;
    if (!nextTokenIs(b, "<boolean literal>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'break' IDENTIFIER? ';'
  public static boolean break_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_statement")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    r = r && break_statement_1(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, BREAK_STATEMENT, r);
    return r;
  }

  // IDENTIFIER?
  private static boolean break_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_statement_1")) return false;
    consumeToken(b, IDENTIFIER);
    return true;
  }

  /* ********************************************************** */
  // '(' primitive_type ')' unary_expression | '(' reference_type ')' unary_expression_not_plus_minus
  public static boolean cast_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cast_expression_0(b, l + 1);
    if (!r) r = cast_expression_1(b, l + 1);
    exit_section_(b, m, CAST_EXPRESSION, r);
    return r;
  }

  // '(' primitive_type ')' unary_expression
  private static boolean cast_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && primitive_type(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && unary_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' reference_type ')' unary_expression_not_plus_minus
  private static boolean cast_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && reference_type(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && unary_expression_not_plus_minus(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'catch' ( formal_parameter ) block
  public static boolean catch_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "catch_clause")) return false;
    if (!nextTokenIs(b, CATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH);
    r = r && catch_clause_1(b, l + 1);
    r = r && block(b, l + 1);
    exit_section_(b, m, CATCH_CLAUSE, r);
    return r;
  }
